# NanoLink

./: .env  .gitignore  LICENSE.txt  README.md  acortadorenlaces.py  config.py  pyproject.toml  requirements.txt
api/app/core/: __init__.py
api/app/models/: user.py
api/app/routes/: admin.py
api/app/scripts/: init_db.py
api/migrations/versions/: 8c10fad09c32_add_superadmin_field.py
app/: __init__.py  models.py
app/core/: __init__.py
app/errors/: __init__.py  errors.json
app/routes/: __init__.py  admin.py  auth.py  main.py
app/services/: __init__.py
app/templates/: 404.html  dashboard.html  error.html  index.html
app/utils/: __init__.py
client/app/core/: __init__.py
client/app/routes/: admin.py  auth.py  main.py
client/app/static/: styles.css
client/app/templates/: admin.html  base.html  dashboard.html  error.html  index.html  login.html  register.html
data/: app.db
migrations/versions/: 405b0646522c_initial_migration.py
scripts/: init_db.py
tests/: test_basic.py
