[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NanoLink"
version = "0.2.0"
description = "Acortador de URLs con autenticación de usuarios, panel de control y panel de administración"
authors = [
    {name = "Juande Molina", email = "mp.juande@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Flask",
    "Flask-SQLAlchemy",
    "Flask-Migrate",
    "Flask-Login",
    "python-dotenv",
    "Werkzeug",
    "psycopg2-binary",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/JuandeMolina/NanoLink"
Repository = "https://github.com/JuandeMolina/NanoLink.git"
Issues = "https://github.com/JuandeMolina/NanoLink/issues"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"